# HpcProject

./: Projet_chronométrage_CALCUL.md  README.md
TestsCPU/: CMakeLists.txt
TestsCPU/includes/: nonOptimisedMat.h  nonOptimisedMat.tpp  optimisedMat.h  optimisedMat.tpp
TestsCPU/src/: main.cpp  nonOptimisedCalculus.cpp  optimisedCalculus.cpp
TestsGPU/: CMakeLists.txt
TestsGPU/includes/: config.h  mat.h  mat.tpp
TestsGPU/src/: gpuCalculus.c  main.cu
